<resources>
    <string name="app_name">AttendHub</string>
    <string name="hello">HELLO</string>
    <string name="TeacherName">Prakash</string>
    <string name="button2">Button</string>
    <string name="name">Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="userName">User Name</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="Dipartment">Department</string>
    <string name="Subject">Subject</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="textview">Name</string>
    <string name="auto">Android AutoFit TextView Example. A TextView that automatically resizes text to fit perfectly within its bounds</string>
    <string name="todo2">TODO</string>
    <string name="button">Password Setting</string>
</resources>

