<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:autofit="http://schemas.android.com/tools"
    android:background="#84FFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        card_view:cardBackgroundColor="#00B8D4"
        card_view:cardElevation="20dp"
        card_view:cardCornerRadius="20dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView">

    </android.support.v7.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="21dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/image"
        app:civ_border_color="#009688"
        app:civ_border_width="0dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignEnd="@+id/profile_image"
        android:background="#84FFFF"
        android:elevation="21dp"
        app:srcCompat="@drawable/ic_menu_camera"
        android:contentDescription="@string/todo1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TeacherName"
        android:textColor="@color/white"
        android:elevation="22dp"
        android:layout_alignTop="@id/nameedit"
        android:textSize="21sp"
        android:id="@+id/textView5" />

    <ImageButton
        android:id="@+id/nameedit"
        android:layout_width="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profile_image"
        android:elevation="23dp"
        android:background="#00B8D4"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/todo2" />



</RelativeLayout>
